# skeleton_stick

./: .gitignore  Cargo.toml  README.md  flake.nix  requirements.txt  result  run-remote.sh  setup.py  shell.nix
.devcontainer/: devcontainer.json
cli/: Cargo.toml
device/: Cargo.toml
device/src/: cli.rs  main.rs  ui.rs
device/src/driver/: mod.rs  simulator.rs
device/src/driver/simulator/: mod.rs  multithread_util.rs
device/src/ui/: app.rs  event.rs  mod.rs  pwscreen.rs
docs/: report.tex
lib/: Cargo.toml
lib/src/: lib.rs  password_file.rs
mkimage/: cfg_boot.sh  cmdline.txt  config.txt
resources/: skeleton-stick.service  udc-keyboard.service
resources/test/: bw_example.json  passwords.skst
skeleton_stick/: Cargo.toml  __init__.py  cli.py  convert.py  convert_test.py  hid.py  hid_test.py  oled.py  pitft_kb.py  storage.py  storage_test.py  tui.py
skeleton_stick/src/: hid.rs  main.rs
skstctl/: Cargo.toml
skstd/: Cargo.toml
skstlib/: Cargo.toml
