[package]
name = "skeleton_stick_device"
version = "2.0.0"
edition = "2021"

[features]
simulator = ["dep:embedded-graphics-simulator"]

[dependencies]
anyhow = "1.0.69"
async-trait = "0.1.64"
clap = { version = "4.1.4", features = ["derive"] }
ctrlc = "3.2.5"
deadqueue = "0.2.4"
embedded-graphics = "0.7.1"
embedded-graphics-simulator = { version = "0.4.0", optional = true }
embedded-hal = "0.2.7"
itertools = "0.10.5"
lazy_static = "1.4.0"
secstr = "0.5.1"
skeleton_stick_lib = { path = "../lib" }
ssd1306 = "0.7.1"
tokio = { version = "1.25.0", features = ["full"] }

[dev-dependencies]
test-case = "2.2.2"
