[package]
name = "skeleton_stick_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aead = { version = "0.5.1", features = ["std"] }
aes-gcm = "0.10.1"
anyhow = "1.0.69"
flate2 = "1.0.25"
generic-array = "0.14.6"
rand_core = { version = "0.6.4", features = ["getrandom", "alloc", "std"] }
scrypt = { version = "0.10.0", default-features = false, features = ["std"] }
secstr = { version = "0.5.1", features = ["serde"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
tokio = { version = "1.25.0", features = ["io-util"] }

[dev-dependencies]
lazy_static = "1.4.0"
tokio = { version = "1.25.0", features = ["full"] }
