[package]
name = "skeleton_stick"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
itertools = "0.10.5"
lazy_static = "1.4.0"
tokio = { version = "1.25.0", features = ["full"] }

[dev-dependencies]
test-case = "2.2.2"
